[tool.poetry]
name = "decision-tree"
version = "0.1.0"
description = "Building a decision tree from scratch"
authors = ["Dirceu Silva <ddasilvajunior@vio.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
